--- a/template/package.json
+++ b/template/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
+    "react": "18.2.0",
+    "react-native": "0.71.6",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
@@ -26,9 +26,10 @@
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/runtime": "^7.20.1",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^26.0.23",
-    "@types/react": "^18.0.21",
+    "@types/jest": "^29.2.1",
+    "@types/react": "^18.0.24",
     "@types/react-native": "^0.70.6",
     "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
@@ -40,12 +41,12 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.2",
-    "jest": "^26.6.3",
+    "jest": "^29.2.1",
     "lint-staged": "^13.0.3",
-    "metro-react-native-babel-preset": "0.72.3",
+    "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.8.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-test-renderer": "18.1.0",
+    "react-test-renderer": "18.2.0",
     "typescript": "^4.8.3"
   },
   "jest": {
